--- a/Material.Icons.Avalonia/App.xaml
+++ b/Material.Icons.Avalonia/App.xaml
@@ -1,10 +1,11 @@
 <Style xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style.Resources>
-      <ResourceDictionary>
-        <ResourceDictionary.MergedDictionaries>
-          <ResourceInclude Source="avares://Material.Icons.Avalonia/MaterialIcon.axaml"></ResourceInclude>
-        </ResourceDictionary.MergedDictionaries>
-      </ResourceDictionary>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceInclude Source="avares://Material.Icons.Avalonia/MaterialIcon.axaml" />
+                <ResourceInclude Source="avares://Material.Icons.Avalonia/MaterialIconText.axaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Style.Resources>
 </Style>
