--- a/Material.Icons.WPF/Themes/Generic.xaml
+++ b/Material.Icons.WPF/Themes/Generic.xaml
@@ -1,19 +1,20 @@
-<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:Material.Icons.WPF">
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:local="clr-namespace:Material.Icons.WPF"
+                    xmlns:system="clr-namespace:System;assembly=System.Runtime">
     <Style TargetType="{x:Type local:MaterialIcon}">
         <Setter Property="IsTabStop" Value="False" />
         <Setter Property="FlowDirection" Value="LeftToRight" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:MaterialIcon}">
-                    <Border Background="{TemplateBinding Background}" 
+                    <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}">
                         <Viewbox FlowDirection="{TemplateBinding FlowDirection}">
-                            <Canvas Width="24" Height="24">
-                                <Path Data="{Binding Data, RelativeSource={RelativeSource TemplatedParent}}"                                   
+                            <Canvas Width="24"
+                                    Height="24">
+                                <Path Data="{Binding Data, RelativeSource={RelativeSource TemplatedParent}}"
                                       Fill="{TemplateBinding Foreground}" />
                             </Canvas>
                         </Viewbox>
@@ -29,17 +30,20 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:MaterialIconText}">
                     <StackPanel Orientation="{TemplateBinding Orientation}">
-                        <local:MaterialIcon Kind="{TemplateBinding Kind}"
-                                            Width="{TemplateBinding IconSize}"
-                                            Height="{TemplateBinding IconSize}"/>
+                        <local:MaterialIcon Width="{TemplateBinding IconSize}"
+                                            Height="{TemplateBinding IconSize}"
+                                            Animation="{TemplateBinding Animation}"
+                                            Kind="{TemplateBinding Kind}" />
                         <TextBlock Text="{TemplateBinding Text}">
                             <TextBlock.Margin>
                                 <MultiBinding>
                                     <MultiBinding.Converter>
-                                        <local:SpacingAsMarginConverter/>
+                                        <local:SpacingAsMarginConverter />
                                     </MultiBinding.Converter>
-                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="Spacing"/>
-                                    <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="Orientation"/>
+                                    <Binding Path="Spacing"
+                                             RelativeSource="{RelativeSource TemplatedParent}" />
+                                    <Binding Path="Orientation"
+                                             RelativeSource="{RelativeSource TemplatedParent}" />
                                 </MultiBinding>
                             </TextBlock.Margin>
                         </TextBlock>
@@ -49,22 +53,25 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="TextFirst" Value="True">
-                <Setter Property="Spacing" Value="5"/>
+                <Setter Property="Spacing" Value="5" />
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type local:MaterialIconText}">
                             <StackPanel Orientation="{TemplateBinding Orientation}">
-                                <TextBlock Text="{TemplateBinding Text}"/>
-                                <local:MaterialIcon Kind="{TemplateBinding Kind}"
-                                                    Width="{TemplateBinding IconSize}"
-                                                    Height="{TemplateBinding IconSize}">
+                                <TextBlock Text="{TemplateBinding Text}" />
+                                <local:MaterialIcon Width="{TemplateBinding IconSize}"
+                                                    Height="{TemplateBinding IconSize}"
+                                                    Animation="{TemplateBinding Animation}"
+                                                    Kind="{TemplateBinding Kind}">
                                     <local:MaterialIcon.Margin>
                                         <MultiBinding>
                                             <MultiBinding.Converter>
-                                                <local:SpacingAsMarginConverter/>
+                                                <local:SpacingAsMarginConverter />
                                             </MultiBinding.Converter>
-                                            <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="Spacing"/>
-                                            <Binding RelativeSource="{RelativeSource TemplatedParent}" Path="Orientation"/>
+                                            <Binding Path="Spacing"
+                                                     RelativeSource="{RelativeSource TemplatedParent}" />
+                                            <Binding Path="Orientation"
+                                                     RelativeSource="{RelativeSource TemplatedParent}" />
                                         </MultiBinding>
                                     </local:MaterialIcon.Margin>
                                 </local:MaterialIcon>
