--- a/Material.Icons.Avalonia/MaterialIconStyles.axaml
+++ b/Material.Icons.Avalonia/MaterialIconStyles.axaml
@@ -1,7 +1,7 @@
-<icons:MaterialIconStyles xmlns="https://github.com/avaloniaui"
+<icons:MaterialIconStyles x:Class="Material.Icons.Avalonia.MaterialIconStyles"
+                          xmlns="https://github.com/avaloniaui"
                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                          xmlns:icons="clr-namespace:Material.Icons.Avalonia"
-                          x:Class="Material.Icons.Avalonia.MaterialIconStyles">
+                          xmlns:icons="clr-namespace:Material.Icons.Avalonia">
   <icons:MaterialIconStyles.Resources>
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
