--- a/Material.Icons.WPF/Themes/Generic.xaml
+++ b/Material.Icons.WPF/Themes/Generic.xaml
@@ -12,14 +12,41 @@
                   Background="{TemplateBinding Background}"
                   BorderBrush="{TemplateBinding BorderBrush}"
                   BorderThickness="{TemplateBinding BorderThickness}">
-            <Viewbox Width="{TemplateBinding Width}"
-                     Height="{TemplateBinding Height}"
+            <Viewbox Name="PART_IconViewbox"
                      FlowDirection="{TemplateBinding FlowDirection}">
+              <Viewbox.Style>
+                <Style TargetType="Viewbox">
+                  <Setter Property="Width"
+                          Value="{Binding IconSize, RelativeSource={RelativeSource TemplatedParent}}" />
+                  <Setter Property="Height"
+                          Value="{Binding IconSize, RelativeSource={RelativeSource TemplatedParent}}" />
+                </Style>
+              </Viewbox.Style>
               <Path Data="{Binding Data, RelativeSource={RelativeSource TemplatedParent}}"
                     Fill="{TemplateBinding Foreground}"
                     Stretch="Uniform" />
             </Viewbox>
           </Border>
+          <ControlTemplate.Triggers>
+            <!-- WPF doesn't support the inverted triggers, and DataTrigger with converter somehow doesn't work here  -->
+            <!-- So we're applying IconSize != NaN style in Viewbox.Style -->
+            <!-- And here is reverting to defaults -->
+            <Trigger Property="IconSize" Value="{x:Static system:Double.NaN}">
+              <Setter TargetName="PART_IconViewbox" Property="Width" Value="NaN" />
+              <Setter TargetName="PART_IconViewbox" Property="Height" Value="NaN" />
+            </Trigger>
+            <MultiTrigger>
+              <MultiTrigger.Conditions>
+                <Condition Property="Width" Value="{x:Static system:Double.NaN}" />
+                <Condition Property="Height" Value="{x:Static system:Double.NaN}" />
+                <Condition Property="IconSize" Value="{x:Static system:Double.NaN}" />
+              </MultiTrigger.Conditions>
+              <Setter TargetName="PART_IconViewbox" Property="Width"
+                      Value="{Binding FontSize, RelativeSource={RelativeSource TemplatedParent}}" />
+              <Setter TargetName="PART_IconViewbox" Property="Height"
+                      Value="{Binding FontSize, RelativeSource={RelativeSource TemplatedParent}}" />
+            </MultiTrigger>
+          </ControlTemplate.Triggers>
         </ControlTemplate>
       </Setter.Value>
     </Setter>
